# parakeet-api

./: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: docker.yml
src/parakeet_api/: audio.py  config.py  formatters.py  main.py  service.py  transcription.py
tests/: test_api.py  test_config.py  test_formatters.py  test_service.py
